# cozip_reader

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  Makefile  README.md  bundle.sh  bundle.txt  description.yml  extension_config.cmake
.cache/clangd/: compile_commands.json
.cache/clangd/release/: compile_commands.json
.cache/clangd/wasm_eh/: compile_commands.json
.cache/clangd/wasm_mvp/: compile_commands.json
.github/workflows/: MainDistributionPipeline.yml
docs/: README.md
src/: cozip_extension.cpp  cozip_subfile_fs.cpp
src/include/: cozip_extension.hpp  cozip_subfile_fs.hpp
test/: README.md  generate_fixtures.py
test/data/: flat_geo.cozip  flat_simple.cozip  flat_store_6files.cozip
test/sql/: cozip.test
